--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -411,11 +411,13 @@
   "staking.epochs.tableBody.slots": "スロット",
   "staking.epochs.tableHeader.performance": "パフォーマンス",
   "staking.epochs.tableHeader.sharedRewards": "報酬の割当て",
+  "staking.info.after.description": "<p>現在ステークプールがCardanoブロックを100%生成しています！</p>",
+  "staking.info.after.heading": "Cardanoネットワークではブロック生成の完全な分散化が達成されました",
+  "staking.info.before.description": "<p>Cardanoはブロック生成の完全な分散化に急速に近づいています。まもなく、Cardanoステークプールのネットワークがすべてのブロックを生成するようになります。</p> <p>現在、{percentageDecentralized}%のブロックがステークプールによって生成されており、連合型ノードが生成しているのはわずか{percentageFederated}%です。</p> <p>Cardanoエポック{epochNumber}の境界よりステークプールがブロックを100%生成し始め、ブロック生成の完全な分散化が達成されます。</p>",
+  "staking.info.before.heading": "ブロック生成の完全分散化",
   "staking.info.buttonLabel": "もっと知る",
-  "staking.info.description": "Cardanoは作成者が運営する連合型システムから、ステークプールオペレーターのコミュニティが運営する分散型システムへと移行しています。この移行期間、ブロックは連合型ノードと、ステークプールの両者により生成されます。ステークプールによるブロック生成率はエポックごとに高まり、最終的にCardanoネットワークにおけるブロック生成は完全に分散化されます。",
-  "staking.info.heading": "Cardanoは分散型システムへと移行しています",
+  "staking.info.countdownTitle": "ブロック生成の完全分散化まであと",
   "staking.info.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
-  "staking.info.percentage": "現在、ステークプールによるブロック生成率は{percentage}%です。",
   "staking.navigation.delegation_center": "委任センター",
   "staking.navigation.epochs": "エポック",
   "staking.navigation.info": "情報",
