--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -469,6 +469,7 @@
   "staking.rewards.tableHeader.date": "日付",
   "staking.rewards.tableHeader.pool": "ステークプール",
   "staking.rewards.tableHeader.reward": "報酬",
+  "staking.rewards.tableHeader.rewardsAddress": "!!!Rewards address",
   "staking.rewards.tableHeader.wallet": "ウォレット",
   "staking.rewards.title": "獲得した委任報酬",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
