--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -417,7 +417,10 @@
   "staking.info.before.heading": "ブロック生成の完全分散化",
   "staking.info.buttonLabel": "もっと知る",
   "staking.info.countdownTitle": "ブロック生成の完全分散化まであと",
+  "staking.info.description": "Cardanoは作成者が運営する連合型システムから、ステークプールオペレーターのコミュニティが運営する分散型システムへと移行しています。この移行期間、ブロックは連合型ノードと、ステークプールの両者により生成されます。ステークプールによるブロック生成率はエポックごとに高まり、最終的にCardanoネットワークにおけるブロック生成は完全に分散化されます。",
+  "staking.info.heading": "Cardanoは分散型システムへと移行しています",
   "staking.info.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
+  "staking.info.percentage": "!!!Currently, {percentage}% of the blocks are produced by the stake pools.",
   "staking.navigation.delegation_center": "委任センター",
   "staking.navigation.epochs": "エポック",
   "staking.navigation.info": "情報",
