--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -411,18 +411,17 @@
   "staking.epochs.tableBody.slots": "スロット",
   "staking.epochs.tableHeader.performance": "パフォーマンス",
   "staking.epochs.tableHeader.sharedRewards": "報酬の割当て",
-  "staking.info.buttonLabel": "もっと知る",
-  "staking.info.description": "Cardanoは作成者が運営する連合型システムから、ステークプールオペレーターのコミュニティが運営する分散型システムへと移行しています。この移行期間、ブロックは連合型ノードと、ステークプールの両者により生成されます。ステークプールによるブロック生成率はエポックごとに高まり、最終的にCardanoネットワークにおけるブロック生成は完全に分散化されます。",
-  "staking.info.heading": "Cardanoは分散型システムへと移行しています",
   "staking.info.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
-  "staking.info.percentage": "!!!Currently, {percentage}% of the blocks are produced by the stake pools.",
   "staking.infoCountdown.after.description": "<p>現在ステークプールがCardanoブロックを100%生成しています！</p>",
   "staking.infoCountdown.after.heading": "Cardanoネットワークではブロック生成の完全な分散化が達成されました",
   "staking.infoCountdown.before.description": "<p>Cardanoはブロック生成の完全な分散化に急速に近づいています。まもなく、Cardanoステークプールのネットワークがすべてのブロックを生成するようになります。</p> <p>現在、{percentageDecentralized}%のブロックがステークプールによって生成されており、連合型ノードが生成しているのはわずか{percentageFederated}%です。</p> <p>Cardanoエポック{epochNumber}の境界よりステークプールがブロックを100%生成し始め、ブロック生成の完全な分散化が達成されます。</p>",
   "staking.infoCountdown.before.heading": "ブロック生成の完全分散化",
   "staking.infoCountdown.buttonLabel": "もっと知る",
   "staking.infoCountdown.countdownTitle": "ブロック生成の完全分散化まであと",
+  "staking.infoCountdown.description": "!!!Cardano is transitioning from a federated system operated by its creators to a decentralized system operated by a community of stake pool operators. During this transition, blocks will be produced both by the federated nodes and by stake pools. The percentage of blocks produced by stake pools will increase every epoch until block production in the Cardano network becomes fully decentralized.",
+  "staking.infoCountdown.heading": "!!!Cardano is transitioning into a decentralized system",
   "staking.infoCountdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
+  "staking.infoCountdown.percentage": "!!!Currently, {percentage}% of the blocks are produced by the stake pools.",
   "staking.navigation.delegation_center": "委任センター",
   "staking.navigation.epochs": "エポック",
   "staking.navigation.info": "情報",
