--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -411,18 +411,17 @@
   "staking.epochs.tableBody.slots": "slots",
   "staking.epochs.tableHeader.performance": "Performance",
   "staking.epochs.tableHeader.sharedRewards": "Shared rewards",
-  "staking.info.buttonLabel": "Learn more",
-  "staking.info.description": "Cardano is transitioning from a federated system operated by its creators to a decentralized system operated by a community of stake pool operators. During this transition, blocks will be produced both by the federated nodes and by stake pools. The percentage of blocks produced by stake pools will increase every epoch until block production in the Cardano network becomes fully decentralized.",
-  "staking.info.heading": "Cardano is transitioning into a decentralized system",
   "staking.info.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
-  "staking.info.percentage": "!!!Currently, {percentage}% of the blocks are produced by the stake pools.",
   "staking.infoCountdown.after.description": "<p>Stake pools are now producing 100% of Cardano blocks!</p>",
   "staking.infoCountdown.after.heading": "The Cardano network is now fully decentralized for block production.",
   "staking.infoCountdown.before.description": "<p>Cardano is fast approaching full decentralization for block production. Soon, all blocks will be produced by Cardano’s network of stake pools. </p> <p>Currently, stake pools are producing {percentageDecentralized}% of blocks, while federated nodes are just producing {percentageFederated}%.</p> <p>At the boundary of Cardano epoch #{epochNumber}, stake pools will start producing 100% of blocks and full block decentralization will be achieved.</p>",
   "staking.infoCountdown.before.heading": "Fully decentralized block production",
   "staking.infoCountdown.buttonLabel": "Learn more",
   "staking.infoCountdown.countdownTitle": "Fully decentralized block production in",
+  "staking.infoCountdown.description": "!!!Cardano is transitioning from a federated system operated by its creators to a decentralized system operated by a community of stake pool operators. During this transition, blocks will be produced both by the federated nodes and by stake pools. The percentage of blocks produced by stake pools will increase every epoch until block production in the Cardano network becomes fully decentralized.",
+  "staking.infoCountdown.heading": "!!!Cardano is transitioning into a decentralized system",
   "staking.infoCountdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
+  "staking.infoCountdown.percentage": "!!!Currently, {percentage}% of the blocks are produced by the stake pools.",
   "staking.navigation.delegation_center": "Delegation center",
   "staking.navigation.epochs": "Epochs",
   "staking.navigation.info": "Info",
