--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -418,10 +418,10 @@
   "staking.infoCountdown.before.heading": "Fully decentralized block production",
   "staking.infoCountdown.buttonLabel": "Learn more",
   "staking.infoCountdown.countdownTitle": "Fully decentralized block production in",
-  "staking.infoCountdown.description": "!!!Cardano is transitioning from a federated system operated by its creators to a decentralized system operated by a community of stake pool operators. During this transition, blocks will be produced both by the federated nodes and by stake pools. The percentage of blocks produced by stake pools will increase every epoch until block production in the Cardano network becomes fully decentralized.",
-  "staking.infoCountdown.heading": "!!!Cardano is transitioning into a decentralized system",
+  "staking.infoCountdown.description": "Cardano is transitioning from a federated system operated by its creators to a decentralized system operated by a community of stake pool operators. During this transition, blocks will be produced both by the federated nodes and by stake pools. The percentage of blocks produced by stake pools will increase every epoch until block production in the Cardano network becomes fully decentralized.",
+  "staking.infoCountdown.heading": "Cardano is transitioning into a decentralized system",
   "staking.infoCountdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
-  "staking.infoCountdown.percentage": "!!!Currently, {percentage}% of the blocks are produced by the stake pools.",
+  "staking.infoCountdown.percentage": "Currently, {percentage}% of the blocks are produced by the stake pools.",
   "staking.navigation.delegation_center": "Delegation center",
   "staking.navigation.epochs": "Epochs",
   "staking.navigation.info": "Info",
