[DDW-435] Update stakepool filter props

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -473,10 +473,10 @@
   "staking.rewards.title": "Earned delegation rewards",
   "staking.stakePools.delegatingListTitle": "Staking pools you are delegating to",
   "staking.stakePools.filter.apply": "Apply",
-  "staking.stakePools.filter.poolsWithoutOffChainData": "Pools without off-chain data",
-  "staking.stakePools.filter.privatePools": "Private pools",
+  "staking.stakePools.filter.hidePoolsWithoutOffChainData": "Hide pools without off-chain data",
+  "staking.stakePools.filter.hidePrivatePools": "Hide private pools",
+  "staking.stakePools.filter.hideRetiringPools": "Hide retiring pools",
   "staking.stakePools.filter.resetFilter": "Reset Filter",
-  "staking.stakePools.filter.retiringPools": "Retiring pools",
   "staking.stakePools.learnMore": "Learn more",
   "staking.stakePools.listTitle": "Stake pools",
   "staking.stakePools.listTitleLoading": "Loading stake pools",
