--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -473,10 +473,10 @@
   "staking.rewards.title": "獲得した委任報酬",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.filter.apply": "適用する",
-  "staking.stakePools.filter.poolsWithoutOffChainData": "オフチェーンデータのないプール",
-  "staking.stakePools.filter.privatePools": "プライベートプール",
+  "staking.stakePools.filter.hidePoolsWithoutOffChainData": "オフチェーンデータのないプール",
+  "staking.stakePools.filter.hidePrivatePools": "プライベートプール",
+  "staking.stakePools.filter.hideRetiringPools": "終了予定のプール",
   "staking.stakePools.filter.resetFilter": "フィルターをリセットする",
-  "staking.stakePools.filter.retiringPools": "終了予定のプール",
   "staking.stakePools.learnMore": "もっと知る",
   "staking.stakePools.listTitle": "ステークプール",
   "staking.stakePools.listTitleLoading": "ステークプールをロード中",
