[DDW-435] Update stakepool filter translations for private and retiring pools

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -350,8 +350,10 @@
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットは既に<span>「{selectedPoolTicker}」</span>ステークプールに委任されています。<span>ステークの委任先を変更する場合は、異なるプールを選択してください。</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolNextLabel": "<span>{selectedWalletName}</span>ウォレットは既に<span>「{selectedPoolTicker}」</span>ステークプールへの委任処理中です。<span>ステークの委任先を変更する場合は、異なるプールを選択してください。</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.description": "現在選択されているステークプール：",
+  "staking.delegationSetup.chooseStakePool.step.dialog.highProfitMarginPoolFooter": "選択されたステークプールは、55.4%の高いマージンが設定されています。別のプールに委任するともっと高い報酬を得ることができます。 高マージンのプールへの委任は、慈善を目的としたプールの場合や、プールを別の目的で支援している場合、問題はありません。",
+  "staking.delegationSetup.chooseStakePool.step.dialog.privatePoolFooter": "選択されたステークプールは、マージン100%のプライベートプールです。このプールに委任しても、すべての報酬はステークプールのものとなり、委任報酬を得ることはできません。",
   "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "最近選択したステークプールから選択する：",
-  "staking.delegationSetup.chooseStakePool.step.dialog.retiringPoolFooter": "選択されたステークプールはまもなく終了します。このまま委任プロセスを続けた場合、このプールの終了に伴い報酬が停止することを避けるためには、プール終了日までに完全な1エポック以上が残っているうちに別のプールにステークを委任し直す必要があります。",
+  "staking.delegationSetup.chooseStakePool.step.dialog.retiringPoolFooter": "選択されたステークプールはまもなく終了します。このプールに委任した場合、報酬を失わないようにするためには、プールの終了日より丸1エポック以上前にウォレットを別のプールに委任し直す必要があります。",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.label": "または利用可能な全ステークプールのリストから選択する：",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.placeholder": "ステークプールを検索する",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの資金を委任するステークプールを選んでください。",
