--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -475,9 +475,9 @@
   "staking.rewards.title": "獲得した委任報酬",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.filter.apply": "適用する",
-  "staking.stakePools.filter.hidePoolsWithoutOffChainData": "オフチェーンデータのないプール",
-  "staking.stakePools.filter.hidePrivatePools": "プライベートプール",
-  "staking.stakePools.filter.hideRetiringPools": "終了予定のプール",
+  "staking.stakePools.filter.hidePoolsWithoutOffChainData": "オフチェーンデータのないプールを非表示にする",
+  "staking.stakePools.filter.hidePrivatePools": "プライベートプールを非表示にする",
+  "staking.stakePools.filter.hideRetiringPools": "終了するプールを非表示にする",
   "staking.stakePools.filter.resetFilter": "フィルターをリセットする",
   "staking.stakePools.learnMore": "もっと知る",
   "staking.stakePools.listTitle": "ステークプール",
